# stock-alert-app

./: .gitignore  DEPLOY_NOW.md  LICENSE  README_CLOUD_DEPLOY.md  SERVER_FIX_REPORT.md  complete_fixed_server.py  reconfigure_test_server.py  render.yaml  simple_api_server.py  simple_server.py  simple_web_scraping_test.py  test_crwv.py  test_oracle_connection.py  test_server.py  test_simple_server.py  test_web_scraping.py
backend/: DATABASE_STRUCTURE.md  Dockerfile  FREE_API_MIGRATION_SUMMARY.md  QUERY_EXAMPLES.md  README.md  README_개선된서버실행.md  README_서버실행.md  clean_stock_api.py  conftest.py  constraints.txt  database_migration.py  debug_samsung_change.py  docker-compose.yml  enhanced_stock_server.py  env.example  env_setup_guide.md  ios_integration_guide.md  naver_parsing_server.py  naver_parsing_server_improved.py  pyproject.toml  pyrightconfig.json  pytest.ini  render.yaml  requirements.txt  run.py  run_ios_simulator.sh  run_server.py  run_server.sh  run_tests.sh  setup.py  setup_env.py  setup_free_notifications.py  simple_server.py  standalone_simulator.py  start_all.py  start_server.py  start_servers.py  start_stable_server.py  stock_alert.db-shm  stock_alert.db-wal  (+8 more)
backend/alembic/: env.py
backend/docs/: cloud_schema.md  database_schema.md
backend/scripts/: check_hosted_db.py  create_schema.py  database_migration.py  generate_env.py  migrate.py  oracle_migration.py  refresh_fx_quotes.py  refresh_watchlist_quotes.py  test_db_connection.py
backend/tests/: conftest.py  test_alert_crud.py  test_alert_scheduler.py  test_api_flow.py  test_auth.py  test_auth_flow.py  (+10 more)
(+76 files in other folders)
