[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-alert-app"
version = "0.1.0"
description = "Stock and Currency Alert Application"
requires-python = ">=3.9"
dependencies = [
    "apns2",
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "asyncpg",
    "aiohttp",
    "feedparser",
]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."} 
